// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > renders correctly with empty props 1`] = `
<ul
  className="list"
  data-testid="list"
  data-vibe="List"
  id="list-1"
  role="listbox"
  tabIndex={-1}
>
  Something
</ul>
`;

exports[`List > renders correctly with list items 1`] = `
<ul
  className="list"
  data-testid="list"
  data-vibe="List"
  id="list-2"
  role="listbox"
  tabIndex={-1}
>
  <li
    aria-disabled={false}
    className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e listItem small"
    data-testid="list-2-item-0"
    id="list-2-item-0"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    role="option"
    tabIndex={0}
  >
    1
  </li>
  <li
    aria-disabled={false}
    className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e listItem small"
    data-testid="list-2-item-1"
    id="list-2-item-1"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    role="option"
    tabIndex={-1}
  >
    2
  </li>
</ul>
`;

exports[`List > renders correctly without props 1`] = `
<ul
  className="list"
  data-testid="list"
  data-vibe="List"
  id="list-0"
  role="listbox"
  tabIndex={-1}
/>
`;
